--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<html>
+<head>
+  
+<script src= "https://d3js.org/d3.v5.min.js"></script>
+<script src= "finalProject.js"></script>
 
+
+</head>
+
+
+
+
+
+
+
+
+
+
+
+</html>
